INCLUDES		=  -I$(top_builddir) -I$(top_srcdir)
pkglib_LIBRARIES 	= librgraph.a

librgraph_a_SOURCES = datastruct.c tools.c graph.c models.c modules.c bipartite.c missing.c matrix.c sparse_missing.c layout.c recommend.c conflict.c genetic.c multiblock.c only_deg.c sannealing.c partition.c io.c fillpartitions.c io.c movements.c
pkginclude_HEADERS 	= datastruct.h tools.h graph.h models.h modules.h bipartite.h sparse_missing.h missing.h matrix.h layout.h recommend.h conflict.h genetic.h multiblock.h only_deg.h sannealing.h partition.h fillpartitions.h io.h movements.h
